<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.SelecaoActivity">

    <Button
        android:id="@+id/buttonPedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedra"
        app:layout_constraintBottom_toTopOf="@+id/buttonTesoura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_mensagem"/>

    <Button
        android:id="@+id/buttonTesoura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tesoura"
        app:layout_constraintBottom_toTopOf="@+id/buttonPapel"
        app:layout_constraintEnd_toEndOf="@+id/buttonPedra"
        app:layout_constraintStart_toStartOf="@+id/buttonPedra"
        app:layout_constraintTop_toBottomOf="@+id/buttonPedra"/>

    <Button
        android:id="@+id/buttonPapel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/papel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonPedra"
        app:layout_constraintStart_toStartOf="@+id/buttonPedra"
        app:layout_constraintTop_toBottomOf="@+id/buttonTesoura"/>

    <TextView
        android:id="@+id/textview_mensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>