<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.ConfrontoActivity">

    <Button
        android:id="@+id/button_coisa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/button_coisa2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_coisa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/button_lutar"
        app:layout_constraintEnd_toEndOf="@+id/button_coisa1"
        app:layout_constraintStart_toStartOf="@+id/button_coisa1"
        app:layout_constraintTop_toBottomOf="@+id/button_coisa1"/>

    <Button
        android:id="@+id/button_lutar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lutar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_coisa1"
        app:layout_constraintStart_toStartOf="@+id/button_coisa1"
        app:layout_constraintTop_toBottomOf="@+id/button_coisa2"/>

    <TextView
        android:id="@+id/textview_anuncio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_fechar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/fechar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/label_placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placar"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_jogador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/label_jogador2"
        app:layout_constraintTop_toBottomOf="@+id/label_placar"/>

    <TextView
        android:id="@+id/label_jogador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_jogador1"
        app:layout_constraintTop_toBottomOf="@+id/label_placar"/>

    <TextView
        android:id="@+id/textview_resultado1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/label_jogador1"
        app:layout_constraintStart_toStartOf="@+id/label_jogador1"
        app:layout_constraintTop_toBottomOf="@+id/label_jogador1"/>

    <TextView
        android:id="@+id/textview_resultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/label_jogador2"
        app:layout_constraintStart_toStartOf="@+id/label_jogador2"
        app:layout_constraintTop_toBottomOf="@+id/label_jogador2"/>

</androidx.constraintlayout.widget.ConstraintLayout>